# squareline-scratch

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  squareline_scratch.c
main/rtc/: rtc_timer.c  rtc_timer.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
main/ui/components/: ui_comp_hook.c
main/ui/images/: ui_img_clock32x32_png.c  ui_img_plus32x32_png.c
main/ui/screens/: ui_ALARMS.c  ui_BathroomYesNo.c  ui_DistanceWalked.c  ui_EditNewAlarm.c  ui_HomeScreen.c  ui_MedEditorPage1.c  ui_NewAlarm.c  ui_Screen1.c
